--- a/calendar.css
+++ b/calendar.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Kanit', sans-serif;
 }
 
 .container {
@@ -70,6 +71,7 @@ td {
     border: 1px solid black;
     padding: 4px;
     cursor: pointer;
+    transition: all ease 0.3s;
 }
 
 .activeDate {
